# wesnoth-ai

./: .gitignore  _main.cfg  ai.cfg  ai_delegated.cfg  ai_delegated.lua  ai_delegated_setup.cfg  ai_imported_rnn.cfg  ai_imported_rnn_setup.cfg  ai_mc.cfg  ai_rnn.cfg  ai_rnn_setup.cfg  inspect.cfg  rust_lua_shared.cfg
wesnoth_ai/: Cargo.toml  tiny_close_relation_default.json
wesnoth_ai/src/: fake_wesnoth.rs  gui.rs  main.rs  monte_carlo_ai.rs  naive_ai.rs  rust_lua_shared.rs  simple_lookahead_ai.rs
