[package]
name = "wesnoth_ai"
version = "0.1.0"
authors = ["Eli Dupree <vcs@elidupree.com>"]

[dependencies]
rand = "0.3"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam = "0.2"
glium = "0.17"
arrayvec = "0.4"
slicevec = "0.1"
typed-arena = "1.3"

[dependencies.conrod]
version = "0.55"
features = ["glium", "winit"]

[dependencies.serde]
version = "1.0"
features = ["rc"]

[dependencies.smallvec]
version = "0.4"
features = ["serde"]

[dependencies.ordered-float]
version = "0.2"
features = ["serde"]

[profile.dev]
opt-level = 3
